<resources>
    <string name="app_name">Rick And Morty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="search_character">Search Character</string>
    <string name="all">All</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="favorites">Favorites</string>
    <string name="error">ERROR</string>
    <string name="connection_error">Connection Error!</string>
    <string name="internet_error">Please check your internet connection!</string>
    <string name="species">Species</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="status">Status</string>
</resources>