<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.characters.CharactersFragment">

    <ImageView
        android:id="@+id/titleRickAndMortyImageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/rick_morty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchBarEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/search_box_background"
        android:drawableStart="@drawable/search_icon"
        android:drawableTint="@drawable/edit_text_drawable_tint_color"
        android:drawablePadding="5dp"
        android:hint="@string/search_character"
        android:inputType="textFilter"
        android:maxLines="1"
        android:textColor="@color/search_text_color"
        android:textColorHint="@drawable/edit_text_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleRickAndMortyImageView" />

    <RadioGroup
        android:id="@+id/filterRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@id/searchBarEditText">

        <RadioButton
            android:id="@+id/allRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:text="@string/all"
            android:textColor="@drawable/radio_button_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/aliveRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:text="@string/alive"
            android:textColor="@drawable/radio_button_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/deadRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:text="@string/dead"
            android:textColor="@drawable/radio_button_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/unknownRadioButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_background"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center"
            android:text="@string/unknown"
            android:textColor="@drawable/radio_button_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/charactersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="6dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterRadioGroup"
        app:spanCount="2"
        tools:listitem="@layout/item_character" />


</androidx.constraintlayout.widget.ConstraintLayout>